# Semantic-Segmentation-Embedded-Cnn

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  requirements.txt
.github/workflows/: ci.yml
benchmarks/: int8_simulation_report.json  jetson_reference_results.json  run_benchmarks.py
configs/: ci_export.yaml  pipeline_ci.json  pipeline_cpp.json  pipeline_cpp_smoke.json  smoke_train.yaml  train_deeplab.yaml  train_unet.yaml
docker/: jetson-l4t.Dockerfile
scripts/: ci_prepare_models.py  export_onnx.ps1  export_onnx.sh  generate_demo_masks.py  run_benchmarks.ps1  train_deeplab.ps1  train_unet.ps1  train_unet.sh  verify_onnxruntime.ps1
scripts/jetson/: polygraphy_int8_example.sh  trtexec_fp16.sh  trtexec_int8.sh
src/cpp/cuda_utils/: system_metrics.cpp  system_metrics.hpp
src/cpp/inference/: logger.hpp  onnx_opencv_engine.cpp  onnx_opencv_engine.hpp
src/cpp/pipeline/: main.cpp
src/cpp/postprocessing/: mask_postprocess.cpp  mask_postprocess.hpp
src/python/evaluation/: evaluate.py  metrics.py
src/python/export/: export_onnx.py  prepare_trt_calibration_images.py  quantize_int8.py  validate_onnx.py
src/python/training/: deeplab_model.py  train.py  unet_model.py
src/python/utils/: __init__.py  augment.py  config.py  dataset.py  losses.py
tests/: test_integration_optional.py  test_losses.py  test_metrics.py  test_onnx_smoke.py  test_postprocess_python.py  test_validate_onnx_reference.py
